tests/errors/undefinedFn.milo
// @error: undefined function 'foo'
fn main(): i32 {
    foo()
    return 0
}
